--- a/theme/footer.html
+++ b/theme/footer.html
@@ -17,7 +17,7 @@
   <div role="contentinfo">
     <!-- Copyright etc -->
     {% if config.copyright %}
-      <p>{{ config.copyright }}. Last update on {{ build_date_utc.strftime('%B %d, %Y') }}.</p>
+      <p>{{ config.copyright }}. Last updated on {{ build_date_utc.strftime('%B %d, %Y') }}.</p>
     {% endif %}
   </div>
 
