--- a/theme/base.html
+++ b/theme/base.html
@@ -23,7 +23,7 @@
   <link rel="stylesheet" href="{{ 'css/theme.css'|url }}" type="text/css" />
   <link rel="stylesheet" href="{{ 'css/theme_extra.css'|url }}" type="text/css" />
   {%- if config.theme.highlightjs %}
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.0/styles/github.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.0/styles/github.min.css" />
   {%- endif %}
   {%- for path in config['extra_css'] %}
   <link rel="stylesheet" href="{{ path|url }}" />
