--- a/theme/versions.html
+++ b/theme/versions.html
@@ -1,4 +1,4 @@
-<div class="rst-versions" role="note" aria-label="versions">
+<div class="rst-versions" data-toggle="rst-versions" role="note" aria-label="versions">
     <span class="rst-current-version" data-toggle="rst-current-version">
       {% if config.repo_name == 'GitHub' %}
           <a href="{{ config.repo_url }}" class="fa fa-github" style="float: left; color: #fcfcfc"> GitHub</a>
