--- a/theme/base.html
+++ b/theme/base.html
@@ -18,12 +18,10 @@
   {%- endblock %}
 
   {%- block styles %}
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,700|Roboto+Slab:400,700|Inconsolata:400,700" type="text/css" />
-
   <link rel="stylesheet" href="{{ 'css/theme.css'|url }}" type="text/css" />
   <link rel="stylesheet" href="{{ 'css/theme_extra.css'|url }}" type="text/css" />
   {%- if config.theme.highlightjs %}
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.0/styles/github.min.css" />
+  <link rel="stylesheet" href="{{ 'css/highlight-github.min.css'|url }}" />
   {%- endif %}
   {%- for path in config['extra_css'] %}
   <link rel="stylesheet" href="{{ path|url }}" />
