--- a/theme/base.html
+++ b/theme/base.html
@@ -40,7 +40,7 @@
   <script src="{{ 'js/jquery-2.1.1.min.js'|url }}" defer></script>
   <script src="{{ 'js/modernizr-2.8.3.min.js'|url }}" defer></script>
   {%- if config.theme.highlightjs %}
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.0/highlight.min.js"></script>
+  <script src="{{ 'js/highlight-9.18.0.min.js'|url }}"></script>
   {%- for lang in config.theme.hljs_languages %}
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.0/languages/{{lang}}.min.js"></script>
   {%- endfor %}
